# Deep-Dummy-Maths

./: Cargo.toml  README.md  cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  ci-test.yml  pypi-release.yml  python-publish.yml
tests/: test_maths.py
