[tool.poetry]
name = "Deep_Dummy_Maths"
version = "0.0.3"
description = "A dummy library for mathematical functions created by Deependu Jha."
authors = ["deependujha <deependujha21@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_dummy_maths", from="src"}]

[tool.poetry.dependencies]
python = "^3.7"
maturin = "^1.8.2"

[tool.maturin]
module-name = "Deep_Dummy_Maths._core"
python-packages = ["Deep_Dummy_Maths"]
python-source = "src"

[build-system]
requires = ["poetry-core","maturin>=1.0,<2.0"]
# build-backend = "poetry.core.masonry.api"
build-backend = "maturin"

[tool.pytest.ini_options]
pythonpath = ["src"]
